[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/Rakugo/Rakugo.gd" type="Script" id=1]
[ext_resource path="res://addons/Rakugo/lib/statements/Jump.gd" type="Script" id=4]
[ext_resource path="res://addons/Rakugo/lib/systems/timers/SkipTimer.gd" type="Script" id=6]
[ext_resource path="res://addons/Rakugo/lib/systems/StoreManager.gd" type="Script" id=10]
[ext_resource path="res://addons/Rakugo/lib/systems/timers/AutoTimer.gd" type="Script" id=11]
[ext_resource path="res://addons/Rakugo/lib/systems/History.gd" type="Script" id=12]

[node name="Rakugo" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="StoreManager" type="Node" parent="."]
script = ExtResource( 10 )

[node name="History" type="Node" parent="."]
script = ExtResource( 12 )

[node name="Statements" type="Node" parent="."]

[node name="Jump" type="Node" parent="Statements"]
script = ExtResource( 4 )

[node name="AutoTimer" type="Timer" parent="."]
script = ExtResource( 11 )

[node name="SkipTimer" type="Timer" parent="."]
script = ExtResource( 6 )

[connection signal="say" from="." to="History" method="_on_say"]
[connection signal="timeout" from="AutoTimer" to="AutoTimer" method="on_loop"]
[connection signal="timeout" from="SkipTimer" to="SkipTimer" method="on_loop"]
